Add Hike class and allow user to add a hike

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/map"
+        android:text="@string/go"
         android:id="@+id/btnMap"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
